--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.14.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.21",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-quill": "^1.3.5",
